--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,11 @@
 <footer class="blog-footer content-wrapper">
   <p>&copy; <span class="full-year"></span> {{ site.title }}</p>
 </footer>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
+<script>
+  $.validate({
+    lang: 'en'
+  })
+</script>
 <script src="{{ site.baseurl }}/assets/js/scripts.js"></script>
