WOrked on finishing some of the homepage sections

--- a/assets/_sass/_base.scss
+++ b/assets/_sass/_base.scss
@@ -1,7 +1,8 @@
 @import 
   'base/normalize',
   'base/syntax-highlighting',
+  'base/variables',
+  'utils/media-breaks',
   'base/colors',
-  'base/typography',
-  'base/variables'
+  'base/typography'
 ; 
