--- a/assets/_sass/base/_typography.scss
+++ b/assets/_sass/base/_typography.scss
@@ -14,6 +14,9 @@ a {
     content: ' (link)';
   }
 }
+p {
+  margin-top: 0;
+}
 
 h1,h2,h3,h4,h5 {
   font-weight: 700;
@@ -25,24 +28,39 @@ h1 {
   font-size: 3.75rem;
   font-style: italic;
   color: $primary-color;
+  @include break-smaller($md-break-point) {
+    font-size: 2rem;
+  }
 }
 
 h2 {
   font-size: 3rem;
   color: $primary-color;
   font-style: italic;
+  @include break-smaller($md-break-point) {
+    font-size: 1.6rem;
+  }
 }
 
 h3 {
   font-size: 2rem;
+  @include break-smaller($md-break-point) {
+    font-size: 1.4rem;
+  }
 }
 
 h4 {
   font-size: 1.5rem;
+  @include break-smaller($md-break-point) {
+    font-size: 1.2rem;
+  }
 }
 
 h5 {
   font-size: 1.25rem;
+  @include break-smaller($md-break-point) {
+    font-size: 1rem;
+  }
 }
 
 
