--- a/assets/_sass/components/_header.scss
+++ b/assets/_sass/components/_header.scss
@@ -1,7 +1,7 @@
 .main-header {
   background: url(/assets/images/BkgImage.png) center no-repeat;
   background-size: cover;
-  padding: 12.5rem 0;
+  padding: 2rem 0;
   position: relative;
   .site-title {
     max-width: 600px;
@@ -13,21 +13,31 @@
       font-style: normal;
       color: $white;
       font-weight: 600;
+      @include break-smaller($md-break-point) {
+        font-size: 1.3rem;
+      }
     }
   }
   .callout, .contact-us {
-    position: absolute;
-    top: 1rem;
-    font-size: 1rem;
+    font-size: 1.2rem;
     color: $white;
     font-weight: 500;
     line-height: 1.5;
     font-style: italic;
+    text-align: center;
   }
-  .callout {
-    left: 1rem;
-  }
-  .contact-us {
-    right: 1rem;
+  @include break-larger($md-break-point) {
+    padding: 12.5rem 0;
+    .callout, .contact-us {
+      font-size: 1rem;
+      position: absolute;
+      top: 1rem;
+    }
+    .callout {
+      left: 1rem;
+    }
+    .contact-us {
+      right: 1rem;
+    }
   }
 }
