Added footer copyright info and finished styling some of the interior content

--- a/assets/_sass/_components.scss
+++ b/assets/_sass/_components.scss
@@ -1,4 +1,6 @@
+@import 'components/container';
 @import 'components/header';
 @import 'components/estimate-form';
 @import 'components/services';
 @import 'components/extra-info';
+@import 'components/footer';
