--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
-<footer class="blog-footer content-wrapper">
-  <p>&copy; <span class="full-year"></span> {{ site.title }}</p>
+<footer class="copyright-info">
+  <p>&copy; <span class="full-year"></span> West TN Spray Foam | SFG Websmiths</p>
+  <p>Office by Maxim Kulikov from the Noun Project | Barn by Bonnie Beach from the Noun Project | Home by Numero Uno from the Noun Project</p>
 </footer>
 <script src="//ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/jquery-form-validator/2.3.26/jquery.form-validator.min.js"></script>
