--- a/assets/_sass/base/_variables.scss
+++ b/assets/_sass/base/_variables.scss
@@ -2,6 +2,7 @@ $lg-break-point: 1200px;
 $break-point: 960px;
 $md-break-point: 768px;
 $sm-break-point: 500px;
+$container-width: 750px;
 
 
 $content-wrapper-width: 1170px;
