--- a/assets/_sass/components/_extra-info.scss
+++ b/assets/_sass/components/_extra-info.scss
@@ -1,9 +1,14 @@
+.who-we-serve {
+  p {
+    margin: 0;
+    font-size: 1.2rem;
+    padding: 1rem 0;
+  }
+}
 .how-and-why {
   padding: 1rem;
 }
 .extra-info {
-  max-width: 750px;
-  margin: 0 auto;
   p {
     margin: 1rem 0;
     line-height: 1.5;
