compressed image for background

--- a/assets/_sass/components/_header.scss
+++ b/assets/_sass/components/_header.scss
@@ -1,5 +1,5 @@
 .main-header {
-  background: url(../images/BkgImage.png) center no-repeat;
+  background: url(../images/BkgImage.jpg) center no-repeat;
   background-size: cover;
   padding: 2rem 0;
   position: relative;
