--- a/assets/_sass/components/_header.scss
+++ b/assets/_sass/components/_header.scss
@@ -25,11 +25,11 @@
     line-height: 1.5;
     font-style: italic;
     text-align: center;
+    font-weight: 600;
   }
   @include break-larger($md-break-point) {
     padding: 12.5rem 0;
     .callout, .contact-us {
-      font-size: 1rem;
       position: absolute;
       top: 1rem;
     }
